Misaligned grids on front page fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,7 +139,9 @@ div.col-sm-4 img {
 }
 
 .col-sm-4 {
-  padding: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-bottom: 5px;
 }
 
 .caption {
